--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify/tailwind4": "^1.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.2.4"
   }
